# fastapi_test

./: .dockeringore  .env  .gitignore  Dockerfile  README.md  config.py  database.py  dependencies.py  docker-compose.yml  env.exemple  main.py  models.py  pyproject.toml  repository.py  requirements.txt  router.py  schemas.py  test.db
auth/: auth_router.py  auth_schemas.py  auth_service.py
user/: user_router.py  user_schemas.py  user_service.py
